Update cassandra-env.sh